--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Sixteenth Project</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="h-screen w-screen flex items-center justify-center bg-light-gray px-[400px] py-[160px]"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
