--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sixteenth Project</title>
   </head>
-  <body>
+  <body class="bg-light-gray">
     <div
       id="root"
-      class="h-screen w-screen flex items-center justify-center bg-light-gray px-[400px] py-[160px]"
+      class="h-screen mobile:h-max w-screen flex items-center justify-center px-[400px] py-[160px] mobile:px-[32px] mobile:py-[74px] mobileT:px-[50px]"
     ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
